categories list: fix alignment

--- a/app/assets/stylesheets/_categories.scss
+++ b/app/assets/stylesheets/_categories.scss
@@ -2,12 +2,13 @@
 /** INDEX **/
 .box-categories-list{
    article{
-      margin: 0 10px;
+      margin: 0 6px;
       position: relative;
       width: 48%;
       height: 300px;
       background-size: cover;
       background-position: center center;
+      display: inline-block;
       &:hover{
          -webkit-transition: 0.5s;
          transition: 0.5s;
